--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- jumbotron -->
     <div class="jumbotron text-center">
       <img src="img/ferry.jpeg" class="img-circle">
-      <h1>Sandhika Galih</h1>
+      <h1>Ferry Wilana</h1>
       <p>Lecturer | Web Developer | YouTuber</p>
     </div>
     <!-- akhir jumbotron -->
