--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <span class="icon-bar"></span>
           </button>
 
-          <a href="#home" class="navbar-brand page-scroll">Ferry Wilana</a>
+          <a href="#home" class="navbar-brand page-scroll">Sandhika Galih</a>
         </div>
         
 
@@ -49,8 +49,8 @@
     
     <!-- jumbotron -->
     <div class="jumbotron text-center">
-      <img src="img/ferry.jpeg" class="img-circle">
-      <h1>Ferry Wilana</h1>
+      <img src="img/sandhika.png" class="img-circle">
+      <h1>Sandhika Galih</h1>
       <p>Lecturer | Web Developer | YouTuber</p>
     </div>
     <!-- akhir jumbotron -->
